--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit>=1.28.0
-pandas>=2.1.0
-numpy>=1.26.0
-joblib>=1.3.0
-plotly>=5.17.0
-scikit-learn>=1.3.0
-imbalanced-learn>=0.11.0
-xgboost>=2.0.0
+streamlit>=1.28.0,<1.40.0
+pandas>=2.1.0,<2.3.0
+numpy>=1.26.0,<1.27.0
+joblib>=1.3.0,<1.5.0
+plotly>=5.17.0,<6.0.0
+scikit-learn>=1.3.0,<1.4.0
+imbalanced-learn>=0.11.0,<0.12.0
+xgboost>=2.0.0,<2.1.0
